--- a/css.css
+++ b/css.css
@@ -108,12 +108,13 @@ h4{
             flex-direction: column;
             align-items: center;
         }
-        .lower{
-            flex-direction: column;
-            align-items: center;
-        }
-        .card{
-            width: 90%;
-            margin: 20px 0;
-        }
+        .lower {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+}
+.card {
+  width: 100%;
+  height: auto;
+}
     }
